[package]
name = "lightspeed-astro"
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/devDucks/lightspeed/"
readme = "README.md"
description = "The new protocol for astronomical devices communication"
categories = ["science"]
keywords = ["astrophotography", "indi", "ascom", "alpaca"]

[lib]
name = "lightspeed_astro"
path = "src/lib.rs"

[dependencies]
protobuf = "3.1"
prost = "0.11"
tonic = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }

[build-dependencies]
protoc-bin-vendored = "3"
protobuf-codegen = "3.1"
protobuf = "3.1"
tonic-build = "0.9"
