[package]
name = "lightspeed-astro"
version = "1.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/devDucks/lightspeed/"
readme = "README.md"
description = "The new protocol for astronomical devices communication"
categories = ["science"]
keywords = ["astrophotography", "indi", "ascom", "alpaca"]

[lib]
name = "lightspeed_astro"
path = "src/lib.rs"

[dependencies]
protobuf = "3.2.0"
prost = "0.11.9"
tonic = "0.9.2"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["serde_derive"] }

[build-dependencies]
protoc-bin-vendored = "3.0.0"
protobuf-codegen = "3.2.0"
protobuf = "3.2.0"
tonic-build = "0.9.2"
